# VIS_Hartlauer_Stieger

VIS_Project/VIS/: .gitignore  CMakeLists.txt  main  settings.gradle.kts
VIS_Project/VIS/general/EnvironmentI/: build.gradle.kts
VIS_Project/VIS/jaxb/BruteForce/: build.gradle.kts
VIS_Project/VIS/jaxb/JSON/: build.gradle.kts
VIS_Project/VIS/jaxb/XML/: build.gradle.kts
VIS_Project/VIS/rest/Environment_RestClient/: build.gradle.kts
VIS_Project/VIS/rest/Environment_RestServer/: build.gradle.kts
VIS_Project/VIS/rest/Hello_RestServer/: build.gradle.kts
VIS_Project/VIS/rest/Hello_RestServer/webapp/: index.html
VIS_Project/VIS/rmi/: Hello_RmiClient.java  Hello_RmiInterface.java  Hello_RmiServer.java
VIS_Project/VIS/rmi/Environment_RmiClient/: build.gradle.kts
VIS_Project/VIS/rmi/Environment_RmiServer/: build.gradle.kts
VIS_Project/VIS/rmi/Hello_RmiClient/: build.gradle.kts
VIS_Project/VIS/rmi/Hello_RmiInterface/: build.gradle.kts
VIS_Project/VIS/rmi/Hello_RmiServer/: build.gradle.kts
VIS_Project/VIS/servlet/EnvironmentService_Servlet/: build.gradle.kts
VIS_Project/VIS/servlet/EnvironmentService_Servlet/webapp/: environment.jsp
VIS_Project/VIS/servlet/Hello_Servlet/: build.gradle.kts
VIS_Project/VIS/servlet/Hello_Servlet/webapp/: HelloWorldServlet.war  index.html
VIS_Project/VIS/servlet/Info_Servlet/: build.gradle.kts
VIS_Project/VIS/servlet/Info_Servlet/webapp/: InfoServlet.war
VIS_Project/VIS/servlet/Session_Servlet/: build.gradle.kts
VIS_Project/VIS/webapps/: HelloWorldServlet.war  InfoServlet.war  SessionServlet.war
(+68 files in other folders)
